--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "compression": "^1.7.3",
     "connect-session-sequelize": "^6.0.0",
     "dockerode": "^3.0.2",
+    "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "express-session": "^1.17.0",
     "history": "^4.10.1",
@@ -53,6 +54,7 @@
     "monaco-editor-webpack-plugin": "^1.8.2",
     "morgan": "^1.9.1",
     "passport": "^0.4.1",
+    "passport-github": "^1.1.0",
     "passport-google-oauth": "^2.0.0",
     "pg": "^7.18.1",
     "pg-hstore": "^2.3.2",
@@ -66,7 +68,8 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "sequelize": "^5.21.3",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "styled-components": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
