--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "scss": "^0.2.4",
     "sequelize": "^5.21.3",
     "socket.io": "^2.3.0",
     "styled-components": "^5.0.0"
