--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-loading": "^2.0.3",
     "react-monaco-editor": "^0.33.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
