--- a/dockerTestRunner/package.json
+++ b/dockerTestRunner/package.json
@@ -2,11 +2,10 @@
   "name": "docker_web_app",
   "version": "1.0.0",
   "description": "Node.js on Docker",
-  "author": "First Last <first.last@example.com>",
+  "author": "[Hop Hop] Array",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "test": "node run_tests.js",
+    "test": "mocha test.js --reporter spec > results.txt; cat results.txt",
     "mocha-test": "mocha test.js"
   },
   "dependencies": { 
